--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
 <title>the Zen of Pydoc</title>
 <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
-<link rel="stylesheet" type="text/css" href="css/custom.style.css">
+<link rel="stylesheet" type="text/css" href="css/custom.style.css"> 
+<link href='http://fonts.googleapis.com/css?family=Alegreya' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
+
+<style type="text/css"> *{font-family: 'Alegreya', serif;}</style>
+
 </head>
 <body>
     <nav id="myNavbar" class="navbar navbar-default navbar-inverse navbar-fixed-top" role="navigation">
@@ -33,20 +37,20 @@
     <div class="container">
         <div class="jumbotron">
             <h1 class="text-center">
-                <span style="color:#e74c3c; text-shadow: -.52px 0 black, 0 .52px black, .52px 0 black, 0 -.52px black">The</span> 
-                <span style="color:#2ecc71; text-shadow: -.52px 0 black, 0 .52px black, .52px 0 black, 0 -.52px black">Zen</span> 
-                <span style="color:#3498db; text-shadow: -.52px 0 black, 0 .52px black, .52px 0 black, 0 -.52px black">of</span> 
-                <span style="color:#9b59b6; text-shadow: -.52px 0 black, 0 .52px black, .52px 0 black, 0 -.52px black">Pydoc</span>
+                <span style="color:black; font-family: 'Alegreya', serif; font-size:110%;">The</span> 
+                <span style="color:#c0392b; font-family: 'Alegreya', serif; font-size:110%;">Zen</span> 
+                <span style="color:black; font-family: 'Alegreya', serif; font-size:110%;">of</span> 
+                <span style="color:black; font-family: 'Alegreya', serif; font-size:110%;">Pydoc</span>
                 <img src="img/logo.png" style="width:100px; height:100px">
                 </h1>
             <h2 class="text-center">
-                <span style="color:#e74c3c; text-shadow: -.52px 0 black, 0 .52px black, .52px 0 black, 0 -.52px black">Your</span> 
-                <span style="color:#f39c12; text-shadow: -.7px 0 black, 0 .52px black, .52px 0 black, 0 -.52px black">code is</span>  
-                <span style="color:#f1c40f; text-shadow: -.52px 0 black, 0 .52px black, .6px 0 black, 0 -.6px black">beautiful,</span> 
-                <span style="color:#2ecc71; text-shadow: -.52px 0 black, 0 .52px black, .6px 0 black, 0 -.6px black">your</span> 
-                <span style="color:#3498db; text-shadow: -.52px 0 black, 0 .52px black, .52px 0 black, 0 -.52px black">documentation</span> 
-                <span style="color:#9b59b6; text-shadow: -.52px 0 black, 0 .52px black, .52px 0 black, 0 -.52px black">should</span> 
-                <span style="color:#9b59b6; text-shadow: -.52px 0 black, 0 .52px black, .52px 0 black, 0 -.52px black">be too</span></h2>
+                <span style="color:black; font-family: 'Alegreya', serif; font-size:110%;">Your</span> 
+                <span style="color:black; font-family: 'Alegreya', serif; font-size:110%;">code is</span>  
+                <span style="color:black; font-family: 'Alegreya', serif; font-size:110%;">beautiful,</span> 
+                <span style="color:black; font-family: 'Alegreya', serif; font-size:110%;">your</span> 
+                <span style="color:black; font-family: 'Alegreya', serif; font-size:110%;">documentation</span> 
+                <span style="color:black; font-family: 'Alegreya', serif; font-size:110%;">should</span> 
+                <span style="color:black; font-family: 'Alegreya', serif; font-size:110%;">be too</span></h2>
             <p class="text-center">a layman's interpretation of Python 2.7 documentation from <a href ="https://docs.python.org/2" target="_blank">docs.python.org</a> designed for one-glance readibility and comprehension</p>
         </div>
         <div class="row">
