--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="jumbotron">
             <h1 class="text-center">
                 <span style="color:black; font-family: 'Alegreya', serif; font-size:110%;">The</span> 
-                <span style="color:#c0392b; font-family: 'Alegreya', serif; font-size:110%;">Zen</span> 
+                <span style="color:#981c1c; font-family: 'Alegreya', serif; font-size:110%;">Zen</span> 
                 <span style="color:black; font-family: 'Alegreya', serif; font-size:110%;">of</span> 
                 <span style="color:black; font-family: 'Alegreya', serif; font-size:110%;">Pydoc</span>
                 <img src="img/logo.png" style="width:100px; height:100px">
