--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="row">
             <div class="col-lg-1 center-block" >
                 <h2 class="text-center">lists</h2>
-                <p class="text-center">lists are the workhorse of python, essentially they are an indexed data structure that can hold elements of any datatypes, who's size can be changed dynamically on the fly. More detailed documentation provided at <a href ="https://docs.python.org/2/tutorial/datastructures.html" target="_blank">docs.python.org</a> </p>
+                <p class="text-center">lists are the workhorse of python, essentially they are an indexed data structure that can hold elements of any datatype, who's size can be changed dynamically on the fly. More detailed documentation provided at <a href ="https://docs.python.org/2/tutorial/datastructures.html" target="_blank">docs.python.org</a> </p>
                 <br/>
                 <p style="font-size: 24px" class="text-center">Basic Python Functions for <span class="premiseObject" style="text-decoration: underline">List objects</span></p>
                 <table class="table vertical">
