--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <div class="row">
             <div class="center-block">
                 <footer>
-                    <p class="text-center">&copy; Copyright 2015 Zen Pydoc</p>
+                    <p class="text-center">&copy; Copyright 2015 Zen of Pydoc</p>
                 </footer>
             </div>
         </div>
