--- a/index.html
+++ b/index.html
@@ -68,49 +68,49 @@
                     </thead>
                     <tbody class = "vertical">
                         <tr>
-                            <td class="td1 text-center"><span class="premiseObject">list</span>.<span class="function">extend(<span class="object">[list2]</span>)</span></td>
+                            <td class="td1 text-center"><a href ="https://docs.python.org/2/tutorial/datastructures.html" target="_blank"><span class="premiseObject">list</span>.<span class="function">extend(<span class="object">[list2]</span>)</span><a></td>
                             <td class="td2 text-center">Adds all the elements in <span class="object">[list2]</span> to the end of <span class="premiseObject">list</span> in order that they appear in <span class="object">[list2]</span></td>
                         </tr>
 
                         <tr>
-                            <td class="td1 text-center"><span class="premiseObject">list</span>.<span class="function">append(<span class="object">object</span>)</span></td>
+                            <td class="td1 text-center"><a href ="https://docs.python.org/2/tutorial/datastructures.html" target="_blank"><span class="premiseObject">list</span>.<span class="function">append(<span class="object">object</span>)</span></a></td>
                             <td class="td2 text-center">Adds <span class="object">object</span> to the end of the <span class="premiseObject">list</span></td>
                         </tr>
 
                         <tr>
-                            <td class="td1 text-center"><span class="premiseObject">list</span>.<span class="function">insert(<span class="index">index</span>, <span class="object">object</span>)</span></td>
+                            <td class="td1 text-center"><a href ="https://docs.python.org/2/tutorial/datastructures.html" target="_blank"><span class="premiseObject">list</span>.<span class="function">insert(<span class="index">index</span>, <span class="object">object</span>)</span></a></td>
                             <td class="td2 text-center">Inserts <span class="object">object</span> at position <span class="index">index</span> in the <span class="premiseObject">list</span></td>
                         </tr>
 
                         <tr>
-                            <td class="td1 text-center"><span class="premiseObject">list</span>.<span class="function">remove(<span class="object">object</span>)</span></td>
+                            <td class="td1 text-center"><a href ="https://docs.python.org/2/tutorial/datastructures.html" target="_blank"><span class="premiseObject">list</span>.<span class="function">remove(<span class="object">object</span>)</span></a></td>
                             <td class="td2 text-center">Removes the first element from the <span class="premiseObject">list</span> who’s value == <span class="object">object</span>; produces a ValueError if <span class="object">object</span> is not in <span class="premiseObject">list</span></td>
                         </tr>
 
                         <tr>
-                            <td class="td1 text-center"><span class="premiseObject">list</span>.<span class="function">pop(<span class="brackets">[<span class="object">object</span>]</span>)</span></td>
+                            <td class="td1 text-center"><a href ="https://docs.python.org/2/tutorial/datastructures.html" target="_blank"><span class="premiseObject">list</span>.<span class="function">pop(<span class="brackets">[<span class="object">object</span>]</span>)</span></a></td>
                             <td class="td2 text-center">Removes the element at <span class="index">index</span> in the <span class="premiseObject">list</span> and returns it. If no <span class="index">index</span> is provided removes and returns the last element in the <span class="premiseObject">list</span> (the <span class="brackets">[ ]</span> indicates that the argument within the <span class="brackets">[<span style="color:black; text-shadow:none">brackets</span>]</span> is optional)</td>
                         </tr>
 
                         <tr>
-                            <td class="td1 text-center"><span class="premiseObject">list</span>.<span class="function">index(<span class="object">object</span>)</span></td>
+                            <td class="td1 text-center"><a href ="https://docs.python.org/2/tutorial/datastructures.html" target="_blank"><span class="premiseObject">list</span>.<span class="function">index(<span class="object">object</span>)</span></a></td>
 
                             <td class="td2 text-center">Returns the <span class="index">index</span> of the first element in the <span class="premiseObject">list</span> who’s value == <span class="object">object</span>; produces a ValueError if <span class="object">object</span> is not in <span class="premiseObject">list</span></td>
                         </tr>
                         
                         <tr>
-                            <td class="td1 text-center"><span class="premiseObject">list</span>.<span class="function">count(<span class="object">object</span>)</span></td>
+                            <td class="td1 text-center"><a href ="https://docs.python.org/2/tutorial/datastructures.html" target="_blank"><span class="premiseObject">list</span>.<span class="function">count(<span class="object">object</span>)</span></a></td>
 
                             <td class="td2 text-center">Returns the number of times <span class="object">object</span> appears in the <span class="premiseObject">list</span></td>
                         </tr>
                          
                         <tr>
-                            <td class="td1 text-center"><span class="premiseObject">list</span>.<span class="function">sort(<span class="brackets">[<span class="function">reverse= <span class="object">boolean_value</span></span>]</span>)</span></td>
+                            <td class="td1 text-center"><a href ="https://docs.python.org/2/tutorial/datastructures.html" target="_blank"><span class="premiseObject">list</span>.<span class="function">sort(<span class="brackets">[<span class="function">reverse= <span class="object">boolean_value</span></span>]</span>)</span></a></td>
 
                             <td class="td2 text-center">Sorts the elements of the <span class="premiseObject">list</span>; optional parameter <span class="function">reverse</span> is set by a <span class="object">boolean_value</span> determining if the <span class="premiseObject">list</span> is sorted backwards or not. There are other optional parameters (<span class="function">cmp, key</span>) to customize sorting, read full documentation for more info.</td>
                         </tr>                         
                         <tr>
-                            <td class="td1 text-center"><span class="premiseObject">list</span>.<span class="function">reverse()</span></td>
+                            <td class="td1 text-center"><a href ="https://docs.python.org/2/tutorial/datastructures.html" target="_blank"><span class="premiseObject">list</span>.<span class="function">reverse()</span><a></td>
 
                             <td class="td2 text-center">Reverses the order that the elements appear in the <span class="premiseObject">list</span></td>
                         </tr>
