switch col 2 to left

--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
         </div>
         <div class="row">
             <div class="col-lg-1 center-block" >
-                <h2 class="text-center">lists</h2>
+                <a href ="https://docs.python.org/2" target="_blank"><h2 class="text-center" style="color:black;">lists</h2></a>
                 <p class="text-center">lists are the workhorse of python, essentially they are an indexed data structure that can hold elements of any datatype, who's size can be changed dynamically on the fly. More detailed documentation provided at <a href ="https://docs.python.org/2/tutorial/datastructures.html" target="_blank">docs.python.org</a> </p>
                 <br/>
-                <p style="font-size: 24px" class="text-center">Basic Python Functions for <span class="premiseObject" style="text-decoration: underline">List objects</span></p>
+                <p style="font-size: 24px" class="text-center">Basic Python Functions for <a href ="https://docs.python.org/2" target="_blank"><span class="premiseObject" style="text-decoration: underline">List objects</span></a></p>
                 <table class="table vertical">
                     <thead class="vertical">
                         <tr>
@@ -69,50 +69,50 @@
                     <tbody class = "vertical">
                         <tr>
                             <td class="td1 text-center"><a href ="https://docs.python.org/2/tutorial/datastructures.html" target="_blank"><span class="premiseObject">list</span>.<span class="function">extend(<span class="object">[list2]</span>)</span><a></td>
-                            <td class="td2 text-center">Adds all the elements in <span class="object">[list2]</span> to the end of <span class="premiseObject">list</span> in order that they appear in <span class="object">[list2]</span></td>
+                            <td class="td2 text-left">Adds all the elements in <span class="object">[list2]</span> to the end of <span class="premiseObject">list</span> in order that they appear in <span class="object">[list2]</span></td>
                         </tr>
 
                         <tr>
                             <td class="td1 text-center"><a href ="https://docs.python.org/2/tutorial/datastructures.html" target="_blank"><span class="premiseObject">list</span>.<span class="function">append(<span class="object">object</span>)</span></a></td>
-                            <td class="td2 text-center">Adds <span class="object">object</span> to the end of the <span class="premiseObject">list</span></td>
+                            <td class="td2 text-left">Adds <span class="object">object</span> to the end of the <span class="premiseObject">list</span></td>
                         </tr>
 
                         <tr>
                             <td class="td1 text-center"><a href ="https://docs.python.org/2/tutorial/datastructures.html" target="_blank"><span class="premiseObject">list</span>.<span class="function">insert(<span class="index">index</span>, <span class="object">object</span>)</span></a></td>
-                            <td class="td2 text-center">Inserts <span class="object">object</span> at position <span class="index">index</span> in the <span class="premiseObject">list</span></td>
+                            <td class="td2 text-left">Inserts <span class="object">object</span> at position <span class="index">index</span> in the <span class="premiseObject">list</span></td>
                         </tr>
 
                         <tr>
                             <td class="td1 text-center"><a href ="https://docs.python.org/2/tutorial/datastructures.html" target="_blank"><span class="premiseObject">list</span>.<span class="function">remove(<span class="object">object</span>)</span></a></td>
-                            <td class="td2 text-center">Removes the first element from the <span class="premiseObject">list</span> who’s value == <span class="object">object</span>; produces a ValueError if <span class="object">object</span> is not in <span class="premiseObject">list</span></td>
+                            <td class="td2 text-left">Removes the first element from the <span class="premiseObject">list</span> who’s value == <span class="object">object</span>; produces a ValueError if <span class="object">object</span> is not in <span class="premiseObject">list</span></td>
                         </tr>
 
                         <tr>
                             <td class="td1 text-center"><a href ="https://docs.python.org/2/tutorial/datastructures.html" target="_blank"><span class="premiseObject">list</span>.<span class="function">pop(<span class="brackets">[<span class="object">object</span>]</span>)</span></a></td>
-                            <td class="td2 text-center">Removes the element at <span class="index">index</span> in the <span class="premiseObject">list</span> and returns it. If no <span class="index">index</span> is provided removes and returns the last element in the <span class="premiseObject">list</span> (the <span class="brackets">[ ]</span> indicates that the argument within the <span class="brackets">[<span style="color:black; text-shadow:none">brackets</span>]</span> is optional)</td>
+                            <td class="td2 text-left">Removes the element at <span class="index">index</span> in the <span class="premiseObject">list</span> and returns it. If no <span class="index">index</span> is provided removes and returns the last element in the <span class="premiseObject">list</span> (the <span class="brackets">[ ]</span> indicates that the argument within the <span class="brackets">[<span style="color:black; text-shadow:none">brackets</span>]</span> is optional)</td>
                         </tr>
 
                         <tr>
                             <td class="td1 text-center"><a href ="https://docs.python.org/2/tutorial/datastructures.html" target="_blank"><span class="premiseObject">list</span>.<span class="function">index(<span class="object">object</span>)</span></a></td>
 
-                            <td class="td2 text-center">Returns the <span class="index">index</span> of the first element in the <span class="premiseObject">list</span> who’s value == <span class="object">object</span>; produces a ValueError if <span class="object">object</span> is not in <span class="premiseObject">list</span></td>
+                            <td class="td2 text-left">Returns the <span class="index">index</span> of the first element in the <span class="premiseObject">list</span> who’s value == <span class="object">object</span>; produces a ValueError if <span class="object">object</span> is not in <span class="premiseObject">list</span></td>
                         </tr>
                         
                         <tr>
                             <td class="td1 text-center"><a href ="https://docs.python.org/2/tutorial/datastructures.html" target="_blank"><span class="premiseObject">list</span>.<span class="function">count(<span class="object">object</span>)</span></a></td>
 
-                            <td class="td2 text-center">Returns the number of times <span class="object">object</span> appears in the <span class="premiseObject">list</span></td>
+                            <td class="td2 text-left">Returns the number of times <span class="object">object</span> appears in the <span class="premiseObject">list</span></td>
                         </tr>
                          
                         <tr>
                             <td class="td1 text-center"><a href ="https://docs.python.org/2/tutorial/datastructures.html" target="_blank"><span class="premiseObject">list</span>.<span class="function">sort(<span class="brackets">[<span class="function">reverse= <span class="object">boolean_value</span></span>]</span>)</span></a></td>
 
-                            <td class="td2 text-center">Sorts the elements of the <span class="premiseObject">list</span>; optional parameter <span class="function">reverse</span> is set by a <span class="object">boolean_value</span> determining if the <span class="premiseObject">list</span> is sorted backwards or not. There are other optional parameters (<span class="function">cmp, key</span>) to customize sorting, read full documentation for more info.</td>
+                            <td class="td2 text-left">Sorts the elements of the <span class="premiseObject">list</span>; optional parameter <span class="function">reverse</span> is set by a <span class="object">boolean_value</span> determining if the <span class="premiseObject">list</span> is sorted backwards or not. There are other optional parameters (<span class="function">cmp, key</span>) to customize sorting, read full documentation for more info.</td>
                         </tr>                         
                         <tr>
                             <td class="td1 text-center"><a href ="https://docs.python.org/2/tutorial/datastructures.html" target="_blank"><span class="premiseObject">list</span>.<span class="function">reverse()</span><a></td>
 
-                            <td class="td2 text-center">Reverses the order that the elements appear in the <span class="premiseObject">list</span></td>
+                            <td class="td2 text-left">Reverses the order that the elements appear in the <span class="premiseObject">list</span></td>
                         </tr>
                     </tbody>    
 
