setting up your computer

--- a/index.html
+++ b/index.html
@@ -52,14 +52,23 @@
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                     </div>  
 
-                    <h1>Due Dilligence</h1>
-                    <div class="textDiv center-block b-black">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    <h1  style='text-align:left; '>Setting up our computer</h1>
+                    <div class="textDiv center-block">
+                        <p>
+                            First, before we do anything we have to make sure that our Mac system software is up to date. The next step is to check if we have JDK 6 (Java Developer Kit) or higher installed, we can do this by typing the command javac -version into a terminal window. If the appropriate JDK is not installed we will have to <a href="http://www.oracle.com/technetwork/java/javase/downloads/index.html">download it</a>. 
+                            <br>
+                            <br>
+                            What we need is the Mac OS x64 version of the JDK, to download it first click the icon that says Java, then accept Oracle's license agreement and then click the download link associated with the Mac OS x64 version of the JDK. A .dmg file will then be downloaded and put into your browser's default download folder, it should be called something along the lines of jdk-8u45-macosx-x64.dmg. Double click the .dmg file to start the installation process. Installing the JDK should be very simple just follow the instructions provided by the installer and let your computer do all the work. Once it's finnished you can double check that everything was successful by typing javac -version once more in the terminal.                            
+                        </p>
                     </div>
                     
-                    <h1>Setting up Android Studio</h1>
-                    <div class="textDiv center-block b-black">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    <h1 style='text-align:left;'>Setting up Android Studio</h1>
+                    <div class="textDiv center-block">
+                        Now that our computer is set up we need to <a href="https://developer.android.com/sdk/index.html">download Android Studio</a>. Accept Google's license agreement
+
+
+
+
                     </div>
 
                     <h1>Starting the project</h1>
