--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@ font-family: 'Libre Baskerville', serif;
                 <div style="padding-left:1%;">
                     <h1>Background</h2>
                     <div class="textDiv center-block">
-                        Welcome! Today we are going to get past our lack of knowledge about Android apps and reach the novice programers first milestone, the awe inspiring Hello World application. 
-                        We are going to be using a Mac so if you have another OS you can follow along, but it may make more sense to look for a different guide. Now let's talk about Android for a little bit. Android is a framework built ontop of java meaning that Android apps are written in java. Knowing the ins and outs of java certainly makes Android development easier, but it is by no means a requirment. In fact because Android is a framework, no previous programing experience is needed to learn how to make Android apps. The core functionality of Android apps are controlled by making use of the code already written by Google in the Android framework. 
+                        Welcome! Today we are going to get past our lack of knowledge of Android development and reach the novice programers first milestone, the awe inspiring Hello World application. 
+                        We are going to be using a Mac so if you have another OS you can follow along, but it may make more sense to look at a different guide. Now let's talk about Android for a little bit. Android is a framework built on top of java meaning that Android apps are written in java. Knowing the ins and outs of java certainly makes Android development easier, but that knowledge is by no means a requirement. In fact the way the Android framework is designed, no previous programing experience is necessasry to learn how to make basic Android apps.
                         <br>
                         <br>
-                        Think of it like putting together a 1000 piece puzzle, except the guiding picture is our imagination and the pieces are code written for us by experts at Google. All we have to do is put the right pieces in the right place to make the picture in our head a reality. 
+                        Think of basic Android development like putting together a 1000 piece puzzle, except the guiding picture is our imagination and the puzzle pieces are code written for us by experts at Google. All we have to do is put the right pieces in the right place to make the picture in our head a reality. 
 
 
 
