changed bootstrap hover

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
 <link rel="stylesheet" type="text/css" href="css/custom.style.twilio.css"> 
-<link href='http://fonts.googleapis.com/css?family=Alegreya' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Libre+Baskerville' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Alegreya|Allerta' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 
@@ -15,7 +14,12 @@
 font-family: 'Libre Baskerville', serif;
 <style type="text/css"> *{ 
     /*font-family: 'Libre Baskerville', serif;*/
+
     font-family: 'Alegreya', serif;
+    /*
+    font-family: 'Inconsolata', ;
+    font-family: 'Fjalla One', sans-serif;
+    font-family: 'Allerta', sans-serif;*/
     }
 </style>
 
@@ -31,16 +35,16 @@ font-family: 'Libre Baskerville', serif;
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">From 0 to Hello</a>
+                <a class="navbar-brand" href="#">From <span style="font-family: 'Allerta', sans-serif;font-weight: lighter;">0</span> to Hello</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             
         </div>
     </nav>
-    <div class="container">
+    <div class="container" style="color: #231f20;">
         <div class="jumbotron" id="jumbotron">
             <h1 class="text-center" style="font-size:360%">
-                From 0 to Hello: <span style="font-size:70%;">Baby steps in Android development</span>
+                From <span style="font-family: 'Allerta', sans-serif;font-weight: lighter;">0</span> to Hello: <span style="font-size:70%;">Baby steps in Android development</span>
             </h1>         
         </div>
         <div class="row">
