--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
                     <div id="background">
                         <div id="start" class="triangle-right" onClick="dropdown(this, this.parentElement.id);"></div>
-                        <h1><span>Background</span></h1>
+                        <h1>Background</h1>
                     </div>
                     <script type="text/javascript">
                         dropdown($('#start')[0], $('#start')[0].parentElement.id);                                            
@@ -73,7 +73,7 @@
                     </div>
 
                     <div id="starting-the-project">
-                        <div class="triangle-right" onClick="dropdown(this, this.parentElement.id);"></div>                
+                        <div id="key" class="triangle-right" onClick="dropdown(this, this.parentElement.id);"></div>                
                         <h1>Starting the project</h1>                        
                     </div>
                     
